@@ -1,3 +1,12 @@
+2014-08-07  Ryuan Choi  <ryuan.choi@samsung.com>
+
+        [EFL] Build break with mpegts since r167025
+        https://bugs.webkit.org/show_bug.cgi?id=135737
+
+        Reviewed by Gyuyoung Kim.
+
+        * PlatformEfl.cmake: Added includes and libraries about MPEG-TS
+
 2014-08-07  Simon Fraser  <simon.fraser@apple.com>
 
         HTML <sub> and <sup> elements do not work in some 64-bit builds
